--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "npm-watch": "^0.3.0",
     "rollup": "^0.55.3",
-    "shopify-buy": "^1.0.2"
+    "shopify-buy": "^1.0.2",
+    "vuex": "^3.0.1"
   }
 }
