--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/vue-storefront.js",
   "scripts": {
     "test": "echo \"No testing yet!\" && exit 1",
-    "build": "rollup src/index.js --o dist/vue-storefront.js --f cjs",
+    "build": "rollup -c",
     "watch": "npm-watch"
   },
   "watch": {
@@ -31,7 +31,10 @@
   "devDependencies": {
     "npm-watch": "^0.3.0",
     "rollup": "^0.55.3",
+    "rollup-plugin-vue": "^3.0.0",
     "shopify-buy": "^1.0.2",
+    "vue": "^2.5.13",
+    "vue-template-compiler": "^2.5.13",
     "vuex": "^3.0.1"
   }
 }
