--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "npm-watch": "^0.3.0",
     "rollup": "^0.55.3",
+    "rollup-plugin-node-resolve": "^3.0.2",
     "rollup-plugin-vue": "^3.0.0",
     "shopify-buy": "^1.0.2",
     "vue": "^2.5.13",
