--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "vue": "^2.5.13",
     "vue-template-compiler": "^2.5.13",
     "vuex": "^3.0.1"
+  },
+  "dependencies": {
+    "lodash": "^4.17.5"
   }
 }
