--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "description": "A component library to create frontends for webshops in Vue",
   "main": "dist/vue-storefront.js",
   "scripts": {
-    "test": "echo \"No testing yet!\" && exit 1",
-    "build": "rollup -c",
-    "watch": "npm-watch"
-  },
-  "watch": {
-    "build": "src/*.*"
+    "dev": "NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "hot": "NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "production": "NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -29,17 +27,13 @@
   },
   "homepage": "https://github.com/BjornDCode/vue-storefront#readme",
   "devDependencies": {
-    "acorn": "^5.4.1",
-    "npm-watch": "^0.3.0",
-    "rollup": "^0.55.3",
-    "rollup-plugin-node-resolve": "^3.0.2",
-    "rollup-plugin-vue": "^3.0.0",
+    "laravel-mix": "^2.0.0",
     "shopify-buy": "^1.0.2",
     "vue": "^2.5.13",
-    "vue-template-compiler": "^2.5.13",
     "vuex": "^3.0.1"
   },
   "dependencies": {
-    "lodash": "^4.17.5"
+    "lodash": "^4.17.5",
+    "siema": "^1.5.1"
   }
 }
