--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "laravel-mix": "^2.0.0",
     "shopify-buy": "^1.0.2",
     "vue": "^2.5.13",
+    "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "dependencies": {
