--- a/package.json
+++ b/package.json
@@ -33,7 +33,14 @@
     "vuex": "^3.0.1"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.1.9",
+    "apollo-client": "^2.2.5",
+    "apollo-link": "^1.2.1",
+    "apollo-link-http": "^1.5.2",
+    "graphql": "^0.13.1",
+    "graphql-tag": "^2.8.0",
     "lodash": "^4.17.5",
-    "siema": "^1.5.1"
+    "siema": "^1.5.1",
+    "vue-apollo": "^3.0.0-beta.4"
   }
 }
