--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "apollo-client": "^2.2.5",
     "apollo-link": "^1.2.1",
     "apollo-link-http": "^1.5.2",
+    "apollo-link-state": "^0.4.0",
     "graphql": "^0.13.1",
     "graphql-tag": "^2.8.0",
     "lodash": "^4.17.5",
