--- a/package.json
+++ b/package.json
@@ -27,12 +27,10 @@
   },
   "homepage": "https://github.com/BjornDCode/vue-storefront#readme",
   "devDependencies": {
-    "laravel-mix": "^2.0.0",
-    "shopify-buy": "^1.0.2",
-    "vue": "^2.5.13",
-    "vuex": "^3.0.1"
+    "laravel-mix": "^2.0.0"
   },
   "dependencies": {
+    "lodash": "^4.17.5",
     "apollo-cache-inmemory": "^1.1.9",
     "apollo-cache-persist": "^0.1.1",
     "apollo-client": "^2.2.5",
@@ -40,8 +38,20 @@
     "apollo-link-http": "^1.5.2",
     "graphql": "^0.13.1",
     "graphql-tag": "^2.8.0",
-    "lodash": "^4.17.5",
     "siema": "^1.5.1",
-    "vue-apollo": "^3.0.0-beta.4"
+    "vue-apollo": "^3.0.0-beta.4",
+    "vue": "^2.5.13"
+  },
+  "peerDependencies": {
+    "apollo-cache-inmemory": "^1.1.9",
+    "apollo-cache-persist": "^0.1.1",
+    "apollo-client": "^2.2.5",
+    "apollo-link": "^1.2.1",
+    "apollo-link-http": "^1.5.2",
+    "graphql": "^0.13.1",
+    "graphql-tag": "^2.8.0",
+    "siema": "^1.5.1",
+    "vue-apollo": "^3.0.0-beta.4",
+    "vue": "^2.5.13"
   }
 }
